# mono

./: vimrc
cpp/misc/: expired_weakptr.cpp  fractioncopyconstructor.cpp  rmcompiledcode.cpp  timer.h
cpp/monsterinheritance/: creature.h  monster.cpp  player.cpp
cpp/opengl/: CMakeLists.txt
cpp/opengl/crateglm/: CMakeLists.txt
cpp/opengl/crateglm/res/shaders/: shader.frag
cpp/opengl/crateglm/src/: crateglm.cpp
cpp/opengl/hellotriangle/: hellotriangle.cpp
cpp/opengl/hellowindow/: hellowindow.cpp
cpp/opengl/interpolated_triangle/include/glad/: glad.h
cpp/opengl/upsidedowntri/: CMakeLists.txt
cpp/opengl/upsidedowntri/src/: shader.vert  upsidedowntri.cpp
cpp/qt/: CMakeLists.txt
cpp/qt/dialog/: CMakeLists.txt
cpp/qt/dialog/src/: window.cpp
cpp/qt/helloqt/include/: window.h
cpp/qt/helloqt/src/: window.cpp
cpp/qt/screenshot/: CMakeLists.txt  main.cpp
cpp/qt/screenshot/include/: screenshot.h
cpp/qt/webcam/: CMakeLists.txt
misc/: Fractionsmrtptr.cpp  fractionclass.cpp  random.h
monsterinheritance/: Items.h  controls.h  inventory.cpp  inventory.h  monster.h  monsterinheritance.cpp  player.h  random.h  stdsorttest.cpp
opengl/crateglm/include/: findexecutable.h
opengl/interpolated_triangle/: CMakeLists.txt  interpolated_triangle.cpp
opengl/shader_uniform/: shader_uniform.cpp
opengl/upsidedowntri/include/: shader.h
opengl/upsidedowntri/src/: glad.c  shader.frag
py/: calctrig.py  dotprod.py
py/qt/: helloqt.py
qt/dialog/: main.cpp
qt/dialog/include/: window.h
qt/dialog/src/: .window.cpp.swp
qt/helloqt/: CMakeLists.txt  main.cpp
qt/screenshot/src/: screenshot.cpp
qt/webcam/include/: window.h
qt/webcam/src/: window.cpp
